--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 600px;
+  height: 600px;
+  text-align: center;
+  box-shadow: 0px 0px 12px cadetblue;
+  border-radius: 12px;
+  background-color: rgb(240, 239, 235);
+}
+#navWrap{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin: 100px;
+}
+li {
+  list-style: decimal;
+  text-align: left;
+  font-size: 16px;
+  margin: 10px;
+}
+.active{
+  color: red;
 }
